# week-summary

./: .gitignore  README.md  pyproject.toml
.kiro/specs/weekly-dev-report/: .config.kiro  design.md  requirements.md  tasks.md
frontend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  middleware.ts  next.config.js  package-lock.json  package.json  vitest.config.ts
frontend/__tests__/: auth-allowlist.props.test.ts  auth-integration.test.ts  container.test.ts  dashboard.test.tsx  data-contract.props.test.ts  data-listweeks.props.test.ts
frontend/__tests__/__snapshots__/: dashboard.test.tsx.snap
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/unauthorized/: page.tsx
frontend/components/: CodexQuestions.tsx  CommitList.tsx  Dashboard.tsx  EmptyState.tsx  LlmSuggestions.tsx  LoginView.tsx  NumbersPanel.tsx  TimeDistribution.tsx  WeekSwitcher.tsx  format.ts  index.ts  motion.tsx
frontend/lib/: auth.ts  data.ts  types.ts
frontend/public/: .gitkeep
tools/weekly_summary/: __init__.py  aggregate.py  config.py  export.py  feishu.py  llm.py  models.py  render.py  requirements-dev.txt  summarize.py  week_window.py
tools/weekly_summary/collectors/: __init__.py  codex_collector.py  git_collector.py
tools/weekly_summary/templates/: .gitkeep  weekly-summary.toml
tools/weekly_summary/tests/: __init__.py  conftest.py  test_aggregate_entries_props.py  test_aggregate_sorting_props.py  test_codex_collector_unit.py  test_codex_discovery_props.py  test_codex_injected_props.py  test_codex_parse_props.py  (+21 more)
(+4 files in other folders)
